--- a/client/app/account/profile/profile.html
+++ b/client/app/account/profile/profile.html
@@ -1,7 +1,7 @@
-<div class="container" style="margin-top: 20px; margin-bottom: 20px; border: 1px solid #dddddd;">
-	<div class="row panel background-blue" style="-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
+<div class="container" style="margin-top: 20px; margin-bottom: 20px; border: 1px solid #dddddd; -webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);">
+box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
+	<div class="row background-blue" style="border-bottom: 1px solid #dddddd;">
 		<div class="col-md-3 bg_blur">
     	    <!-- <a href="#" class="follow_btn hidden-xs">Follow</a> -->
 		</div>
@@ -15,7 +15,7 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);">
                 <p><span>{{currentUser.summary}}</span><p>
            </div>
         </div>
-    </div>   
+    </div>
     
 	<div class="row nav">    
         <div class="col-md-4"></div>
@@ -27,18 +27,149 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);">
         </div>
     </div>
 
-    <div class="row" style="text-align:center;">
-        <div class="col-md-4">คําถามใจ
-            {{myQuestions}}
+    <tabset justified="true">
+      <tab select="onSelectCategory('myQuestions')">
+        <tab-heading>คําถามใจ <span class="badge" style="font-size: inherit;">{{currentUser.questions_count | thousandSuffix}}</span></tab-heading>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="list-group">
+                <a ng-repeat="question in myQuestions" class="list-group-item" href="/questions/{{question._id}}">
+                  <div class="row">
+                    <div class="col-md-8">
+                      <h3>{{question.name}}</h3>
+                      <br>
+                      <div>
+                        <i class="fa fa-tag"></i>                     
+                        <p style="display:inline;" >{{question.topic}} - </p>
+                        <small ng-repeat="tag in question.tags"> {{tag.name}}</small>
+                      </div>
+                    </div>
+                    <div class="col-md-4 background-yellow" style="border-left: 1px solid #dddddd; border-bottom: 1px solid #dddddd; padding: 5px;">
+                      <div class="row" style="text-align:center;">
+                        <p class="col-lg-3 col-sm-3 col-xs-3">คนช่วย<br/>
+                        <strong class="blue bigger"> {{question.answers_count | thousandSuffix}}</strong></p>
+                        <p class="col-lg-3 col-sm-3 col-xs-3">โหวต<br/>
+                        <strong class="blue bigger"> {{question.votes_count | thousandSuffix}}</strong></p>
+                        <p class="col-lg-3 col-sm-3 col-xs-3">ผู้เข้าชม<br/>
+                        <strong class="blue bigger"> {{question.views | thousandSuffix}}</strong></p>
+                        <p class="col-lg-3 col-sm-3 col-xs-3">กําลังใจ<br/>
+                        <strong class="blue bigger">{{question.jais_count | thousandSuffix}}</strong></p>
+                      </div>
+                      <hr style="width: 80%; margin-top:5px; margin-bottom:5px;">
+                      <p class="text-center">{{question.created | timeAgo}} - {{question.created | date:'MMM d, y'}}</p>
+                    </div>
+                  </div>
+                </a>    
+            </div>
+          </div>
+        </div>
+      </tab>
+
+      <tab select="onSelectCategory('myArticles')">
+        <tab-heading>ความรู้ที่ได้แบ่งบัน <span class="badge" style="font-size: inherit;">{{currentUser.articles_count | thousandSuffix}}</span></tab-heading>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="list-group">
+                <a ng-repeat="article in myArticles" class="list-group-item" href="/articles/{{article._id}}">
+                <div class="row">
+                  <div class="col-md-8">
+                    <h3>{{article.name}}</h3>
+                    <br>
+                    <div>
+                      <i class="fa fa-tag"></i>                       
+                      <p style="display:inline;" >{{article.topic}} - </p>
+                      <small ng-repeat="tag in article.tags"> {{tag.name}}</small>
+                    </div>
+                  </div>
+                  <div class="col-md-4 background-yellow" style="border-left: 1px solid #dddddd; border-bottom: 1px solid #dddddd; padding: 5px;">
+                    <div class="row" style="text-align:center;">
+                      <p class="col-lg-3 col-sm-3 col-xs-3">ความเห็น<br/>
+                      <strong class="blue bigger"> {{article.comments_count | thousandSuffix}}</strong></p>
+                      <p class="col-lg-3 col-sm-3 col-xs-3">แชร์<br/>
+                      <strong class="blue bigger"> {{article.shares | thousandSuffix}}</strong></p>
+                      <p class="col-lg-3 col-sm-3 col-xs-3">โหวต<br/>
+                      <strong class="blue bigger"> {{article.votes_count | thousandSuffix}}</strong></p>
+                      <p class="col-lg-3 col-sm-3 col-xs-3">ผู้เข้าชม<br/>
+                      <strong class="blue bigger"> {{article.views | thousandSuffix}}</strong></p>
+                    </div>
+                    <hr style="width: 80%; margin-top:5px; margin-bottom:5px;">
+                    <p class="text-center">{{article.created | timeAgo}} - {{article.created | date:'MMM d, y'}}</p>
+                  </div>
+                </div>
+                </a>    
+            </div>
+          </div>
+        </div>
+      </tab>
+
+      <tab select="onSelectCategory('myAnswersInQuestions')">
+        <tab-heading>คําถามที่ได้ให้คําตอบ <span class="badge" style="font-size: inherit;">{{currentUser.answers_count | thousandSuffix}}</span></tab-heading>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="list-group">
+                <a ng-repeat="question in myAnswersInQuestions" class="list-group-item" href="/questions/{{question._id}}">
+                  <div class="row">
+                    <div class="col-md-8" style="padding:10px;">
+                      <h3>{{question.name}}</h3>
+<!--                       <div ng-repeat="answer in question.answers">
+                        <div ng-show="answer.user_id === userId" ng-bind-html="answer.content"></div>
+
+                      </div> -->
+                      <br>
+                      <div>
+                        <i class="fa fa-tag"></i>                     
+                        <p style="display:inline;" >{{question.topic}} - </p>
+                        <small ng-repeat="tag in question.tags"> {{tag.name}}</small>
+                      </div>
+                    </div>
+                    <div ng-show="question.answered" class="col-md-1" style="text-align: center; padding:10px;">
+                      <i class="fa fa-check" style="color:green; font-size:1.5em;"></i>
+                      <p>คําถามนี้ได้คําตอบแล้ว</p>
+                    </div>
+                    <div ng-hide="question.answered" class="col-md-1" style="text-align: center; padding:10px;">
+                      <i class="fa fa-times" style="color:red; font-size:1.5em;"></i>
+                      <p>คําถามนี้ยังไม่ได้คําตอบที่โดนใจ</p>
+                    </div>
+                    <div class="col-md-3 background-yellow" style="border-left: 1px solid #dddddd; border-bottom: 1px solid #dddddd; padding: 5px;">
+                      <div class="row" style="text-align:center;">
+                        <p class="col-lg-4 col-sm-4 col-xs-4">โหวต<br/>
+                        <strong class="blue bigger"> {{question.votes_count | thousandSuffix}}</strong></p>
+                        <p class="col-lg-4 col-sm-4 col-xs-4">ผู้เข้าชม<br/>
+                        <strong class="blue bigger"> {{question.views | thousandSuffix}}</strong></p>
+                        <p class="col-lg-4 col-sm-4 col-xs-4">คําตอบ<br/>
+                        <strong class="blue bigger"> {{question.answers_count | thousandSuffix}}</strong></p>
+                      </div>
+                      <hr style="width: 80%; margin-top:5px; margin-bottom:5px;">
+                      <p class="text-center">{{question.created | timeAgo}} - {{question.created | date:'MMM d, y'}}</p>
+                    </div>
+                  </div>
+                </a>    
+            </div>
+          </div>
+        </div>
+        </tab>
+    </tabset>
+
+<!--     <div class="row" style="text-align:center;">
+        <div class="col-md-4">
+            <h4>คําถามใจ</h4>
+            <div class="list-group">
+                <a ng-repeat="question in myQuestions" class="list-group-item" href="/questions/{{question._id}}">
+                    <h4>{{question.name}}</h4>
+                    <p>{{question}}</p>
+                </a>
+                
+            </div>
         </div>
         <div class="col-md-4">ความรู้ที่ได้แบ่งบัน{{myArticles}}</div>
-        <div class="col-md-4">คําตอบที่ได้ให้{{answersInQuestions}}</div>
+        <div class="col-md-4">คําตอบที่ได้ให้{{myAnswersInQuestions}}</div>
     </div>
     <div class="row">
         <div class="col-md-4">
             ใจที่เก็บไว้
+            {{myFav}}
         </div>
-    </div>
+    </div> -->
 
 
 </div>
