--- a/client/app/user/user.html
+++ b/client/app/user/user.html
@@ -12,7 +12,7 @@ box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75); border-radius: 4px;">
                 <h1>{{currentUser.username}}</h1>
                 <h4>{{currentUser.role}}</h4>
                 <p><small>{{currentUser.reason}}</small><p>
-                <p>{{currentUser.summary}}<p>
+                <p><span>{{currentUser.summary}}</span><p>
            </div>
         </div>
     </div>
