--- a/client/index.html
+++ b/client/index.html
@@ -93,20 +93,26 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/article/mainArticles/mainArticles.controller.js"></script>
+          <script src="app/article/mainArticles/mainArticles.js"></script>
+          <script src="app/article/singleArticle/singleArticle.controller.js"></script>
+          <script src="app/article/singleArticle/singleArticle.js"></script>
           <script src="app/ask/ask.controller.js"></script>
           <script src="app/ask/ask.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/landing/landing.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
-          <script src="app/news/mainArticles/mainArticles.controller.js"></script>
-          <script src="app/news/mainArticles/mainArticles.js"></script>
-          <script src="app/news/singleArticle/singleArticle.controller.js"></script>
-          <script src="app/news/singleArticle/singleArticle.js"></script>
           <script src="app/question/question.controller.js"></script>
           <script src="app/question/question.js"></script>
           <script src="app/share/share.controller.js"></script>
           <script src="app/share/share.js"></script>
+          <script src="app/tag/tag/tag.controller.js"></script>
+          <script src="app/tag/tag/tag.js"></script>
+          <script src="app/tag/tags/tags.controller.js"></script>
+          <script src="app/tag/tags/tags.js"></script>
+          <script src="app/user/user.controller.js"></script>
+          <script src="app/user/user.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/footer/footer.controller.js"></script>
