--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
       <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
-      <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
       <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.css" />
+      <link rel="stylesheet" href="bower_components/animate-css/animate.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
